--- a/minil.toml
+++ b/minil.toml
@@ -1,4 +1,6 @@
+module_maker = "ModuleBuild"
 [build]
 build_class = "builder::MyBuilder"
 [no_index]
 directory = ['t', 'xt', 'inc', 'share', 'eg', 'examples', 'author', 'builder', 'deps']
+
